[gd_scene load_steps=6 format=3 uid="uid://4an7svyd3c01"]

[ext_resource type="Script" path="res://inventory/craftingMenu/craftingMenu.gd" id="1_qkflq"]
[ext_resource type="PackedScene" uid="uid://uoqkr5i0favc" path="res://inventory/craftingMenu/craftingMenuNavButton.tscn" id="2_ausv4"]
[ext_resource type="Texture2D" uid="uid://cgc6wuraa74yu" path="res://inventory/craftingMenu/InventoryTextures/CraftingBG.png" id="3_0fqku"]
[ext_resource type="Texture2D" uid="uid://bn01lk66sxeni" path="res://inventory/craftingMenu/InventoryTextures/CloseButton.png" id="4_qbsfe"]
[ext_resource type="Texture2D" uid="uid://b0vvd3itcwj28" path="res://inventory/craftingMenu/InventoryTextures/CloseButton_Hover.png" id="5_i2grk"]

[node name="CraftingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qkflq")

[node name="margin" type="Control" parent="."]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -430.0
offset_top = -250.0
offset_right = 500.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="margin"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0fqku")
expand_mode = 3
stretch_mode = 4

[node name="subsectionContainer" type="Control" parent="margin"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 53.0
offset_top = 46.0
offset_right = -158.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="closeButton" parent="margin" instance=ExtResource("2_ausv4")]
layout_mode = 2
anchors_preset = 0
offset_left = 875.0
offset_top = -54.0
offset_right = -93.0
offset_bottom = -517.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("4_qbsfe")
texture_hover = ExtResource("5_i2grk")
texture_focused = ExtResource("4_qbsfe")

[node name="VBoxContainer" type="VBoxContainer" parent="margin"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_left = 869.0
offset_top = 61.0
offset_right = 969.0
offset_bottom = 561.0
theme_override_constants/separation = 0

[node name="inventoryButton" parent="margin/VBoxContainer" instance=ExtResource("2_ausv4")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bttnText = "Inventory"
ICON_PATH = "res://inventory/craftingMenu/InventoryTextures/SideBoxes/Sidebox_Coin.png"

[node name="craftingButton" parent="margin/VBoxContainer" instance=ExtResource("2_ausv4")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bttnText = "Crafting"
ICON_PATH = "res://inventory/craftingMenu/InventoryTextures/SideBoxes/Sidebox_Hammer.png"

[connection signal="bttnClicked" from="margin/closeButton" to="." method="_on_close_button_bttn_clicked"]
[connection signal="bttnClicked" from="margin/VBoxContainer/inventoryButton" to="." method="_on_inventory_button_bttn_clicked"]
[connection signal="bttnClicked" from="margin/VBoxContainer/craftingButton" to="." method="_on_crafting_button_bttn_clicked"]
